Fri Feb 10 00:06:28 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* win32/win32.c (win32_stat): replace stat for enable when pathname
	  ends with '/' or '\' for mswin32 on Win9X / Win2k.

	* win32/win32.h: ditto.

	* ruby.h: ditto.

	* dir.c (rb_glob_helper): ditto.

	* file.c (rb_stat, rb_file_s_stat, eaccess, check3rdbyte): ditto.

Fri Feb  9 22:54:57 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ruby.c (ruby_init_loadpath): convert '\\' to '/'
	  before finding executable file path.

Fri Feb  8 23:53:08 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/config.h.in (inline): add inline definition.

Thu Feb  8 21:27:24 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb (install_rb): fix handling of relative path.

	* lib/mkmf.rb (create_makefile): add srcdir.

Wed Feb  7 16:05:22 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (parse_quotedwords): %w should allow parenthesis escape.

Wed Feb  7 00:57:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (parse_qstring): %q should allow terminator escape.

Wed Feb  7 00:57:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_equal): all option flags should be same to be equal.

Tue Feb  6 21:01:29 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb: ignore EOFError on only specified case.

	* lib/net/http.rb: take HTTP 1.0 server into account.

Mon Feb 5 00:39:06 2001  KANEKO Naoshi  <wbs01621@mail.wbs.ne.jp>

	* dir.c: use ISXXX() instead of isxxx().

	* dln.c (aix_loaderror): ditto.

	* file.c (rb_file_s_expand_path): ditto.

	* string.c (rb_str_upcase_bang): ditto.

	* win32/win32.c (do_spawn): ditto.

	* win32/win32.c (NtMakeCmdVector): ditto.

	* win32/win32.c (opendir): ditto.

Fri Feb  3 00:48:50 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/win32.c (isInternalCmd): ignore case for shell's internal
	  command. (marge from HEAD)

Fri Feb  2 16:14:51 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
