@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.2"
-#define RUBY_RELEASE_DATE "2001-02-09"
+#define RUBY_RELEASE_DATE "2001-02-11"
 #define RUBY_VERSION_CODE 162
-#define RUBY_RELEASE_CODE 20010209
+#define RUBY_RELEASE_CODE 20010211
